# internal/generated/api.gen.go
@@ -1,6 +1,6 @@
 // Package generated provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
 package generated
 
 import (
@@ -17,11 +17,6 @@ const (
 	DEPOSIT  WalletOperationRequestOperationType = "DEPOSIT"
 	WITHDRAW WalletOperationRequestOperationType = "WITHDRAW"
 )
-
-// CreateWalletRequest defines model for CreateWalletRequest.
-type CreateWalletRequest struct {
-	WalletId openapi_types.UUID `json:"walletId"`
-}
 
 // Error defines model for Error.
 type Error struct {
@@ -44,11 +39,14 @@ type WalletOperationRequest struct {
 // WalletOperationRequestOperationType defines model for WalletOperationRequest.OperationType.
 type WalletOperationRequestOperationType string
 
+// CreateWalletJSONBody defines parameters for CreateWallet.
+type CreateWalletJSONBody = map[string]interface{}
+
 // ProcessWalletOperationJSONRequestBody defines body for ProcessWalletOperation for application/json ContentType.
 type ProcessWalletOperationJSONRequestBody = WalletOperationRequest
 
 // CreateWalletJSONRequestBody defines body for CreateWallet for application/json ContentType.
-type CreateWalletJSONRequestBody = CreateWalletRequest
+type CreateWalletJSONRequestBody = CreateWalletJSONBody
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
