# internal/service/entity.go
@@ -3,9 +3,11 @@ package service
 import (
 	"context"
 
+	"github.com/devopesik/wallet-basic-operations/internal/repository"
 	"github.com/google/uuid"
 )
 
+// OperationType представляет тип операции
 type OperationType string
 
 const (
@@ -14,7 +16,8 @@ const (
 )
 
 type WalletService interface {
-	ProcessOperation(ctx context.Context, walletID uuid.UUID, opType OperationType, amount int64) error
-	GetBalance(ctx context.Context, walletID uuid.UUID) (int64, error)
-	CreateWallet(ctx context.Context, walletID uuid.UUID) error
+	Deposit(ctx context.Context, walletID uuid.UUID, amount int64) error
+	Withdraw(ctx context.Context, walletID uuid.UUID, amount int64) error
+	GetWallet(ctx context.Context, walletID uuid.UUID) (*repository.Wallet, error)
+	CreateWallet(ctx context.Context) (*repository.Wallet, error)
 }
